--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
       - id: check-merge-conflict
       - id: debug-statements
       - id: detect-private-key
-      - id: end-of-file-fixer
+      #- id: end-of-file-fixer
       - id: no-commit-to-branch
         args:
           - --pattern=master|main
